# timingBarrier

./: .gitignore  README.md  cleanAll.sh  compileAll.sh  runAll
MPI/: CMakeLists.txt  runTest.sh  runTestWithTaskset.sh
MPI/src/: main.c
MPI_Sync/: CMakeLists.txt
MPI_sm/: runTest.sh
MPI_sm/src/: CMakeLists.txt  main.c
OpenMP/: CMakeLists.txt  runTest.sh  runTestWithTaskset.sh
OpenMP/src/: main.c
plots/: createPlot.sh  help.gnp  plot.gnp  plotError.gnp  plotErrorGnu.gnp  plotGnu.gnp  plotGnuMinicluster.gnp  plotGnu_Pin.gnp  plot_Pin.gnp
plots/blackMagic/: results.txt
plots/blackMagic/gnu/: Mpi.txt  Mpi_Pin.txt  OpenMP.txt  OpenMP_Pin.txt
plots/blackMagic/intel/: Mpi.txt  Mpi_Pin.txt  OpenMP.txt  OpenMP_Pin.txt
plots/blackMagic/pgi/: Mpi.txt  Mpi_Pin.txt  OpenMP.txt  OpenMP_Pin.txt
plots/blueWaters/: results.txt
plots/blueWaters/gnu/: Mpi.txt  OpenMP.txt
plots/blueWaters/intel/: Mpi.txt  OpenMP.txt
plots/blueWaters/pgi/: Mpi.txt  OpenMP.txt
plots/dunkel/: results.txt
plots/dunkel/gnu/: Mpi.txt  Mpi_Pin.txt  OpenMP.txt  OpenMP_Pin.txt
plots/dunkel/intel/: Mpi.txt  Mpi_Pin.txt  OpenMP.txt  OpenMP_Pin.txt
plots/dunkel/pgi/: Mpi.txt  Mpi_Pin.txt  OpenMP.txt  OpenMP_Pin.txt
plots/golub/: results.txt
plots/golub/gnu/: Mpi.txt  OpenMP.txt
plots/golub/intel/: Mpi.txt  OpenMP.txt
plots/golub334/gnu/: Mpi.txt  Mpi_Pin.txt  OpenMP.txt  OpenMP_Pin.txt
plots/koelsch/gnu/: Mpi.txt  Mpi_Pin.txt  OpenMP.txt  OpenMP_Pin.txt
plots/koelsch/intel/: Mpi.txt  OpenMP.txt
plots/koelsch/pgi/: Mpi.txt  Mpi_Pin.txt  OpenMP.txt  OpenMP_Pin.txt
plots/porter/: results.txt
plots/porter/gnu/: Mpi.txt  Mpi_Pin.txt  OpenMP.txt  OpenMP_Pin.txt
plots/porter/gnuCluster/: Mpi.txt
plots/stout/: results.txt
(+26 files in other folders)
